plugins {
    id("java-library")
    id("maven-publish")
    id("net.neoforged.moddev") version "2.0.30-beta"
}

version = "${property("minecraft_version")}-${property("mod_version")}"
if (System.getenv("BUILD_NUMBER") != null) {
    version = "$version.${System.getenv("BUILD_NUMBER")}"
}
val baseArchivesName = project.property("mod_id").toString()
base {
    archivesName.set(project.property("mod_id").toString())
}
group = "${property("mod_group_id")}"

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

tasks.named<Wrapper>("wrapper") {
    distributionType = Wrapper.DistributionType.BIN
}

val localRuntime: Configuration by configurations.creating
configurations.runtimeClasspath {
    extendsFrom(localRuntime)
}

neoForge {
    version.set(project.property("neo_version").toString())

    parchment {
        mappingsVersion.set(project.property("parchment_mappings_version").toString())
        minecraftVersion.set(project.property("parchment_minecraft_version").toString())
    }

    setAccessTransformers(
        "src/main/resources/META-INF/accesstransformer.cfg",
        "src/main/resources/META-INF/recipebuilders.cfg",
        "src/main/resources/META-INF/blockproperties.cfg",
        "src/main/resources/META-INF/renderstates.cfg"
    )

    runs {
        register("client") {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty("neoforge.enabledGameTestNamespaces", project.property("mod_id").toString())
        }

        register("server") {
            server()
            programArgument("--nogui")
            systemProperty("neoforge.enabledGameTestNamespaces", project.property("mod_id").toString())
        }

        register("gameTestServer") {
            type = "gameTestServer"
            systemProperty("neoforge.enabledGameTestNamespaces", project.property("mod_id").toString())
        }

        register("data") {
            data()
            programArguments.addAll(
                "--mod", project.property("mod_id").toString(),
                "--all",
                "--output", file("src/generated/resources/").absolutePath,
                "--existing", file("src/main/resources/").absolutePath
            )
        }

        configureEach {
            jvmArgument("-Dmixin.debug=true")
            jvmArgument("-Xmx4G")
            systemProperty("neoforge.logging.markers", "REGISTRIES")
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        create("${property("mod_id")}") {
            sourceSet(sourceSets.main.get())
        }
    }
}

sourceSets {
    main {
        resources.srcDir("src/generated/resources")
    }
}

repositories {
    flatDir {
        dirs("lib")
    }
    mavenLocal()
    mavenCentral()
    maven {
        name = "Curios maven"
        url = uri("https://maven.theillusivec4.top/")
    }
    maven {
        name = "JEI maven"
        url = uri("https://dvs1.progwml6.com/files/maven")
    }
    maven {
        name = "BlameJared maven"
        url = uri("https://maven.blamejared.com/")
    }
    maven {
        name = "KosmX's maven"
        url = uri("https://maven.kosmx.dev/")
    }
    maven {
        name = "Curse Maven"
        url = uri("https://cursemaven.com")
        content {
            includeGroup("curse.maven")
        }
    }
    maven {
        url = uri("https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/")
        content {
            includeGroup("software.bernie.geckolib")
        }
    }
    maven {
        name = "ModMaven"
        url = uri("https://modmaven.dev")
    }
    maven {
        name = "jitpack"
        url = uri("https://jitpack.io")
        content {
            includeGroup("io.github")
        }
    }
    maven {
        name = "OctoStudios"
        url = uri("https://maven.octo-studios.com/releases")
    }
    maven {
        url = uri("https://maven.latvian.dev/releases")
        content {
            includeGroup("dev.latvian.mods")
        }
    }
    maven {
        url = uri("https://maven.createmod.net")
    } //Create
    maven {
        url = uri("https://mvn.devos.one/snapshots")
    } //Registrate
    maven {
        url = uri("https://raw.githubusercontent.com/Fuzss/modresources/main/maven")
    } // NeoForge config api port, needed by ponder
}

dependencies {
    // JEI
    compileOnlyApi(("mezz.jei:jei-${project.property("minecraft_version")}-neoforge-api:${project.property("jei_version")}"))
    runtimeOnly(("mezz.jei:jei-${project.property("minecraft_version")}-neoforge:${project.property("jei_version")}"))

    // Curios
    compileOnlyApi(("top.theillusivec4.curios:curios-neoforge:${property("curios_version")}"))
    runtimeOnly(("top.theillusivec4.curios:curios-neoforge:${property("curios_version")}"))

    // Lodestone
    compileOnlyApi(("team.lodestar.lodestone:lodestone:${property("minecraft_version")}-${property("lodestone_version")}"))
    runtimeOnly(("team.lodestar.lodestone:lodestone:${property("minecraft_version")}-${property("lodestone_version")}"))

    // KubeJS
    implementation("curse.maven:rhino-416294:6184623")
    implementation("curse.maven:kubejs-238086:5810100")

    // Tetra, Optional
//    compileOnly(("curse.maven:tetra-${property("tetra_version")}"))
//    compileOnly(("se.mickelus.mutil:mutil:${property("mutil_version")}"))

    // Create Optional
//    compileOnlyApi("com.simibubi.create:create-${property("minecraft_version")}:${property("create_version")}") {
//        isTransitive = false
//    }
//    localRuntime("com.simibubi.create:create-${property("minecraft_version")}:${property("create_version")}") {
//        isTransitive = false
//    }
//    compileOnlyApi("net.createmod.ponder:Ponder-NeoForge-${property("minecraft_version")}:${property("ponder_version")}")
//    localRuntime("net.createmod.ponder:Ponder-NeoForge-${property("minecraft_version")}:${property("ponder_version")}")
//    compileOnlyApi("dev.engine-room.flywheel:flywheel-neoforge-api-${property("minecraft_version")}:${property("flywheel_version")}")
//    localRuntime("dev.engine-room.flywheel:flywheel-neoforge-${property("minecraft_version")}:${property("flywheel_version")}")
//    compileOnlyApi("com.tterrag.registrate:Registrate:${property("registrate_version")}")
//    localRuntime("com.tterrag.registrate:Registrate:${property("registrate_version")}")

    // Farmer's Delight, Optional
    compileOnlyApi(("curse.maven:farmers-delight-398521:5878217"))
    localRuntime(("curse.maven:farmers-delight-398521:5878217"))

    //Iron's Spells and Spellbooks, Optional
    compileOnlyApi(("software.bernie.geckolib:geckolib-neoforge-${property("minecraft_version")}:${property("gecko_lib_version")}"))
    compileOnlyApi(("dev.kosmx.player-anim:player-animation-lib-forge:${property("player_animator_version")}"))
    compileOnlyApi(("curse.maven:irons-spells-n-spellbooks-855414:5863590"))

    //Runtime Mods
    localRuntime(("curse.maven:jeed-532286:5693385"))
    localRuntime(("curse.maven:spark-361579:5759671"))
    localRuntime(("curse.maven:fusion-connected-textures-854949:6073987"))
    localRuntime(("curse.maven:overloaded-armor-bar-314002:5537850"))

    //FTB Whatever
    localRuntime("curse.maven:architectury-api-419699:5786327")
    localRuntime("curse.maven:ftb-library-forge-404465:5754910")

    //AttributeFix
    localRuntime(("curse.maven:bookshelf-228525:5824127")) //Required for AttributeFix
    localRuntime(("curse.maven:prickle-1023259:5836410")) //Required for AttributeFix
    localRuntime(("curse.maven:attributefix-280510:5824104"))

    // Imgui
    compileOnly("io.github.spair:imgui-java-app:${property("imgui_version")}")
    compileOnly("io.github.spair:imgui-java-lwjgl3:${property("imgui_version")}")
    compileOnly("io.github.spair:imgui-java-binding:${property("imgui_version")}")
    compileOnly("io.github.spair:imgui-java-natives-windows:${property("imgui_version")}")
    compileOnly("io.github.spair:imgui-java-natives-macos-ft:${property("imgui_version")}")
    compileOnly("io.github.spair:imgui-java-natives-linux:${property("imgui_version")}")
    localRuntime("io.github.spair:imgui-java-app:${property("imgui_version")}")
    localRuntime("io.github.spair:imgui-java-lwjgl3:${property("imgui_version")}")
    localRuntime("io.github.spair:imgui-java-binding:${property("imgui_version")}")
    localRuntime("io.github.spair:imgui-java-natives-windows:${property("imgui_version")}")
    localRuntime("io.github.spair:imgui-java-natives-macos-ft:${property("imgui_version")}")
    localRuntime("io.github.spair:imgui-java-natives-linux:${property("imgui_version")}")
    additionalRuntimeClasspath("io.github.spair:imgui-java-app:${property("imgui_version")}")
    additionalRuntimeClasspath("io.github.spair:imgui-java-lwjgl3:${property("imgui_version")}")
    additionalRuntimeClasspath("io.github.spair:imgui-java-binding:${property("imgui_version")}")
    additionalRuntimeClasspath("io.github.spair:imgui-java-natives-windows:${property("imgui_version")}")
    additionalRuntimeClasspath("io.github.spair:imgui-java-natives-macos-ft:${property("imgui_version")}")
    additionalRuntimeClasspath("io.github.spair:imgui-java-natives-linux:${property("imgui_version")}")
}

val generateModMetadata by tasks.registering(ProcessResources::class) {
    val replaceProperties = mapOf(
        "minecraft_version" to project.findProperty("minecraft_version") as String,
        "minecraft_version_range" to project.findProperty("minecraft_version_range") as String,
        "neo_version" to project.findProperty("neo_version") as String,
        "neo_version_range" to project.findProperty("neo_version_range") as String,
        "loader_version_range" to project.findProperty("loader_version_range") as String,
        "mod_id" to project.findProperty("mod_id") as String,
        "mod_name" to project.findProperty("mod_name") as String,
        "mod_license" to project.findProperty("mod_license") as String,
        "mod_version" to project.findProperty("mod_version") as String,
        "mod_authors" to project.findProperty("mod_authors") as String,
        "mod_description" to project.findProperty("mod_description") as String,
        "lodestone_version_range" to project.findProperty("lodestone_version_range") as String
    )
    inputs.properties(replaceProperties)
    expand(replaceProperties)

    filesMatching("**/*.java") {
        exclude()
    }

    from("src/main/templates")
    into("build/generated/sources/modMetadata")
}
sourceSets["main"].resources.srcDir(generateModMetadata)
neoForge.ideSyncTask(generateModMetadata)

java {
//    withJavadocJar()
    withSourcesJar()
}

publishing {
    publications {
        register<MavenPublication>("mavenJava") {
            artifactId = "${property("mod_id")}"
            from(components["java"])
        }
    }
    repositories {
        maven {
            url = uri("file://${System.getenv("local_maven")}")
        }
    }
}

idea {
    module {
        for (fileName in listOf("run", "out", "logs")) {
            excludeDirs.add(file(fileName))
        }
    }
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
}

private fun DependencyHandlerScope.jarJar(dependencyNotation: Dependency?) {
    if (dependencyNotation != null) {
        add("jarJar", dependencyNotation)
    }
}
